All done except for one spacing issue

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     padding: 20px;
     margin: auto;
 }
+#main {
+    height: 1000px;
+    margin-top: 20px;
+    margin-bottom: 20px;  /*NOT WORKING*/
+}
 header {
     background: #ebebeb;
     padding: 10px;
@@ -18,13 +23,16 @@ nav {
     text-align: left;
     padding: 10px;
 }
+#content {
+    padding-top: 20;
+}
 #future {
     color: #ebebeb;
     background: maroon;
     float: left;
     width: 68%;
     height: 1000px;
-    overflow: scroll
+    overflow: scroll;
 }
 #side {
     color: white;
@@ -34,6 +42,8 @@ nav {
     width: 30%; 
     height: 1000px;
 }
+
+
 footer {
     color: black;
     background: orange;
